# ModernCMake

./: CMakeLists.txt  README.md  main.cpp
findPackageTarget/: CMakeLists.txt
importedTarget/: CMakeLists.txt  main.cpp
includeTarget/: CMakeLists.txt
lib/: CMakeLists.txt  basicLib.cpp  basicLib.h
lib/libPrivate/: CMakeLists.txt  libPrivate.cpp  libPrivate.h
lib/libPublic/: CMakeLists.txt  libPublic.cpp  libPublic.h
